[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/IO/Pulse.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/Theme.tres" type="Theme" id=2]

[node name="Pulse" type="GraphNode" groups=["io", "nodes"]]
margin_right = 128.0
margin_bottom = 128.0
theme = ExtResource( 2 )
title = "PULSE"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color( 0.415686, 0.447059, 0.521569, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 30.0
margin_right = 118.0
margin_bottom = 33.0
rect_min_size = Vector2( 3, 3 )

[node name="Toggle" type="CheckButton" parent="."]
margin_left = 10.0
margin_top = 46.0
margin_right = 118.0
margin_bottom = 118.0
focus_mode = 0
text = "0"

[node name="FreqLbl" type="Label" parent="."]
margin_left = 10.0
margin_top = 131.0
margin_right = 118.0
margin_bottom = 162.0
text = "1"
align = 1

[node name="Freq" type="HSlider" parent="."]
margin_left = 10.0
margin_top = 175.0
margin_right = 118.0
margin_bottom = 191.0
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0
scrollable = false

[node name="Control" type="Control" parent="."]
margin_left = 10.0
margin_top = 204.0
margin_right = 118.0
margin_bottom = 204.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="close_request" from="." to="." method="_on_Pulse_close_request"]
[connection signal="toggled" from="Toggle" to="." method="_on_Toggle_toggled"]
[connection signal="value_changed" from="Freq" to="." method="_on_Freq_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
